--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,11 @@ name = "ford_fulkerson_maciej_grzesik_268372"
 version = "0.1.0"
 edition = "2021"
 
+[profile.bench]
+debug = true
+
 [dependencies]
 petgraph = "0.7.1"
 rand = "0.9.0"
 plotters = "0.3.7"
+statrs = "0.18.0"
